More Babbage Stuff